Closed Bug 555673 Opened 14 years ago Closed 14 years ago

FramePropertyTable.cpp failed to compile with Sun Studio on Solaris

Categories

(Core :: Layout, defect)

All
OpenSolaris
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

References

Details

Attachments

(1 file)

"../../../layout/base/FramePropertyTable.cpp", line 73: Error: The name entry is unusable in a default parameter.
"../../../layout/base/FramePropertyTable.cpp", line 73: Error: An integer constant expression is required within the array subscript operator.
2 Error(s) and 14 Warning(s) detected.
Attached patch patchSplinter Review
Assignee: nobody → ginn.chen
Status: NEW → ASSIGNED
Attachment #435573 - Flags: review?(roc)
http://hg.mozilla.org/mozilla-central/rev/5b8da2154030
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: