Bug 555673 FramePropertyTable.cpp failed to compile with Sun Studio on Solaris r=roc